--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,7 @@
         app:layout_constraintTop_toBottomOf="@id/title_container">
 
         <LinearLayout
+            android:id="@+id/state_stats_layout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -173,6 +174,7 @@
             android:background="@color/black" />
 
         <LinearLayout
+            android:id="@+id/country_stats_layout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
