--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
                 android:layout_margin="10dp"
                 android:fontFamily="@font/gilroylight"
                 android:gravity="center"
-                android:text="Home"
+                android:text="@string/app_name"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
@@ -51,7 +51,7 @@
                 android:id="@+id/state_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="State"
+                android:text="@string/home_name_state"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
 
@@ -66,7 +66,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Total"
+                    android:text="@string/home_total_cases"
 
                     android:textColor="@color/white" />
 
@@ -95,7 +95,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Active"
+                    android:text="@string/home_active_cases"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -121,7 +121,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Recovered"
+                    android:text="@string/home_total_recovered"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -147,7 +147,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Deaths"
+                    android:text="@string/home_total_deaths"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -183,7 +183,7 @@
                 android:id="@+id/country_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Country"
+                android:text="@string/home_name_country"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
 
@@ -198,7 +198,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Total"
+                    android:text="@string/home_total_cases"
 
                     android:textColor="@color/white" />
 
@@ -227,7 +227,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Active"
+                    android:text="@string/home_active_cases"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -253,7 +253,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Recovered"
+                    android:text="@string/home_total_recovered"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -279,7 +279,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     android:gravity="center|start"
-                    android:text="Deaths"
+                    android:text="@string/home_total_deaths"
                     android:textColor="@color/white" />
 
                 <TextView
