--- a/app/src/main/res/layout/fragment_notice.xml
+++ b/app/src/main/res/layout/fragment_notice.xml
@@ -8,11 +8,12 @@
 
     <com.github.florent37.shapeofview.shapes.RoundRectView
 
+        android:id="@+id/roundRectView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         app:layout_constraintTop_toTopOf="parent"
         app:shape_roundRect_bottomLeftRadius="20dp"
-        android:layout_marginTop="3dp"
         app:shape_roundRect_bottomRightRadius="20dp">
 
         <LinearLayout
@@ -24,9 +25,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/gilroylight"
                 android:gravity="center"
                 android:text="Notice"
-                android:fontFamily="@font/gilroylight"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
@@ -51,9 +52,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/gilroylight"
                 android:gravity="center"
                 android:text="Notice"
-                android:fontFamily="@font/gilroylight"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
@@ -63,9 +64,20 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_container" />
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
