--- a/app/src/main/res/layout/item_stats_expandable_country_parent.xml
+++ b/app/src/main/res/layout/item_stats_expandable_country_parent.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:layout_margin="5dp"
+    android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <ImageView
@@ -15,9 +16,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textSize="20sp"
         android:text="@string/home_name_country"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
