--- a/app/src/main/res/layout/fragment_supplies.xml
+++ b/app/src/main/res/layout/fragment_supplies.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccent">
-
 
     <com.github.florent37.shapeofview.shapes.RoundRectView
 
@@ -27,7 +26,6 @@
                 android:layout_margin="10dp"
                 android:fontFamily="@font/gilroylight"
                 android:gravity="center"
-                android:text="Notice"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
@@ -54,31 +52,12 @@
                 android:layout_margin="10dp"
                 android:fontFamily="@font/gilroylight"
                 android:gravity="center"
-                android:text="Notice"
+                android:text="Supplies"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
         </LinearLayout>
 
     </com.github.florent37.shapeofview.shapes.RoundRectView>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:overScrollMode="never"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_container" />
-
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
