--- a/app/src/main/res/layout/item_stats_country_expandable_view.xml
+++ b/app/src/main/res/layout/item_stats_country_expandable_view.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:layout_marginEnd="5dp"
-                android:textStyle="bold|italic"
+                android:textStyle="bold"
                 android:text="0" />
 
             <ImageView
