BottomAppBar Icons Updated

--- a/app/src/main/res/layout/fragment_fun_zone.xml
+++ b/app/src/main/res/layout/fragment_fun_zone.xml
@@ -52,7 +52,7 @@
                 android:layout_margin="10dp"
                 android:fontFamily="@font/gilroylight"
                 android:gravity="center"
-                android:text="Time Pass"
+                android:text="Fun Zone"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
