--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -88,6 +88,7 @@
                 android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/google_pay"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_margin="10dp"
@@ -112,6 +113,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/paytm"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_margin="10dp"
@@ -136,6 +138,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/phone_pe"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_margin="10dp"
