--- a/app/src/main/res/layout/fragment_supplies.xml
+++ b/app/src/main/res/layout/fragment_supplies.xml
@@ -1,37 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccent">
-
-    <com.github.florent37.shapeofview.shapes.RoundRectView
-
-        android:id="@+id/roundRectView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shape_roundRect_bottomLeftRadius="20dp"
-        app:shape_roundRect_bottomRightRadius="20dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/grey_700">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:fontFamily="@font/gilroylight"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="30sp" />
-
-        </LinearLayout>
-
-    </com.github.florent37.shapeofview.shapes.RoundRectView>
 
     <com.github.florent37.shapeofview.shapes.RoundRectView
         android:id="@+id/title_container"
@@ -60,4 +33,11 @@
 
     </com.github.florent37.shapeofview.shapes.RoundRectView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/item_supplies_add_items"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+</LinearLayout>
