Fragment Supplies Updated

--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -68,7 +68,7 @@
         android:overScrollMode="never"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_container">
+        app:layout_constraintTop_toBottomOf="@id/roundRectView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -152,8 +152,8 @@
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:padding="20dp"
                         android:layout_height="wrap_content"
+                        android:padding="20dp"
                         android:src="@drawable/ic_phone_pay" />
 
 
