--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -153,6 +153,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingBottom="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -163,7 +164,7 @@
                 android:layout_marginVertical="5dp"
                 android:text="@string/home_name_state"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="21sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -286,6 +287,7 @@
             android:id="@+id/country_stats_layout"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:paddingBottom="10dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
@@ -297,7 +299,7 @@
                 android:layout_marginVertical="5dp"
                 android:text="@string/home_name_country"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="21sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
