--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -10,7 +10,7 @@
 
         <item
             android:id="@+id/nav_fun_zone"
-            android:icon="@drawable/ic_funzone"
+            android:icon="@drawable/ic_fun_zone"
             android:title="Fun Zone" />
 
         <item
