--- a/app/src/main/res/layout/fragment_fun_zone.xml
+++ b/app/src/main/res/layout/fragment_fun_zone.xml
@@ -60,4 +60,15 @@
 
     </com.github.florent37.shapeofview.shapes.RoundRectView>
 
+    <Button
+        android:id="@+id/trivia_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Trivia"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/roundRectView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
