--- a/app/src/main/res/layout/activity_stats_state.xml
+++ b/app/src/main/res/layout/activity_stats_state.xml
@@ -127,19 +127,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/state_stats_layout">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sort by Confirmed Cases: "
-            android:textSize="16sp"
-            />
-
         <Switch
             android:id="@+id/sort_switch"
-            android:layout_width="wrap_content"
+            android:text="Sort by Number of Cases"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:gravity="end" />
+            android:gravity="start|center_vertical" />
 
     </LinearLayout>
 
