--- a/app/src/main/res/layout/item_notice_feed.xml
+++ b/app/src/main/res/layout/item_notice_feed.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
+    app:cardBackgroundColor="@color/colorAccent"
     android:elevation="8dp"
-    app:cardCornerRadius="8dp"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="5dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +22,10 @@
 
         <ImageView
             android:id="@+id/notice_image"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
+            android:background="@color/black"
+            android:padding="1dp"
+            android:scaleType="fitXY"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
@@ -37,15 +42,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 tools:text="From" />
 
             <TextView
                 android:id="@+id/notice_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:marqueeRepeatLimit="marquee_forever"
                 tools:text="@tools:sample/lorem/random" />
 
