--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -431,7 +431,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/grey_50"
-                android:orientation="vertical"/>
+                android:orientation="vertical">
+
+
+
+            </LinearLayout>
 
         </ScrollView>
 
