--- a/app/src/main/res/layout/item_notice_feed.xml
+++ b/app/src/main/res/layout/item_notice_feed.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="5dp"
     app:cardBackgroundColor="@color/colorAccent"
     android:elevation="8dp"
     app:cardUseCompatPadding="true"
@@ -52,7 +53,9 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:textColor="@color/white"
+                android:ellipsize="end"
                 android:marqueeRepeatLimit="marquee_forever"
+                android:maxLines="5"
                 tools:text="@tools:sample/lorem/random" />
 
         </LinearLayout>
