--- a/app/src/main/res/layout/activity_stats_state.xml
+++ b/app/src/main/res/layout/activity_stats_state.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".StatsStateActivity">
+    tools:context="team.hashbash.sangarodhak.StatsStateActivity">
 
     <LinearLayout
         android:id="@+id/state_stats_layout"
