--- a/app/src/main/res/layout/activity_stats_world.xml
+++ b/app/src/main/res/layout/activity_stats_world.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".StatsWorldActivity">
+    tools:context="team.hashbash.sangarodhak.StatsWorldActivity">
 
     <LinearLayout
         android:id="@+id/global_stats_layout"
