--- a/app/src/main/res/layout/activity_trivia.xml
+++ b/app/src/main/res/layout/activity_trivia.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".TriviaActivity">
+    tools:context="team.hashbash.sangarodhak.TriviaActivity">
 
     <View
         android:id="@+id/view"
@@ -85,6 +85,7 @@
             android:layout_height="50dp"
             android:layout_marginVertical="15dp"
             android:background="@drawable/trivia_option_background"
+            android:clickable="false"
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:text="Option 1"
@@ -97,6 +98,7 @@
             android:layout_height="50dp"
             android:layout_marginVertical="15dp"
             android:background="@drawable/trivia_option_background"
+            android:clickable="false"
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:text="Option 2"
@@ -109,6 +111,7 @@
             android:layout_height="50dp"
             android:layout_marginVertical="15dp"
             android:background="@drawable/trivia_option_background"
+            android:clickable="false"
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:text="Option 3"
@@ -121,6 +124,7 @@
             android:layout_height="50dp"
             android:layout_marginVertical="15dp"
             android:background="@drawable/trivia_option_background"
+            android:clickable="false"
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:text="Option 4"
