--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -423,8 +423,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:background="@color/grey_50"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/grey_50">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -435,13 +435,12 @@
                     android:id="@+id/district_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Loading..."
-                    android:textColor="@color/white"
                     android:layout_margin="10dp"
                     android:background="@drawable/rounded_corner_background"
-
                     android:padding="10dp"
-                    />
+                    android:gravity="center"
+                    android:text="Loading..."
+                    android:textColor="@color/white" />
 
 
                 <LinearLayout
@@ -450,7 +449,6 @@
                     android:layout_height="wrap_content"
                     android:background="@color/grey_50"
                     android:orientation="vertical">
-
 
 
                 </LinearLayout>
