--- a/app/src/main/res/layout/fragment_supplies.xml
+++ b/app/src/main/res/layout/fragment_supplies.xml
@@ -196,7 +196,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:background="@drawable/trivia_option_background"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/white"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
                 android:text="Checkout"
